# celeba-dcgan

./: README.md  config.ini  dcgan.py  main.py  pyproject.toml  train.py  utils.py
.dvc/: config
data/: img_align_celeba.dvc
