[tool.poetry]
name = "dcgan-celeba"
version = "0.1.0"
description = ""
authors = ["Nonaka Kenya <k.nonaka@opt.ne.jp>"]

[tool.poetry.dependencies]
python = "3.9.*"
dvc = {extras = ["gs"], version = "^2.9.3"}
torch = "^1.10.1"
torchvision = "^0.11.2"
numpy = "^1.22.1"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
